hard codes color: black onto localization-button and side-button to fix blue button text on iphone

--- a/src/components/localization/localization.css
+++ b/src/components/localization/localization.css
@@ -1,5 +1,6 @@
 .localization-button {
   background-color: transparent;
+  color: black;
   border: none;
   position: relative;
   z-index: 2;
