--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ p {
 
 .side-button {
   background-color: transparent;
+  color: black;
   border: none;
   position: absolute;
   z-index: 2;
